# fundamentos-OS

./: .gitignore  README.md
Projeto/: CMakeLists.txt
Projeto/include/: file.h  list.h
Projeto/src/: file.c  list.c  main.c
Threads/Barreira/barreira_exemplo/: CMakeLists.txt
Threads/Barreira/barreira_exemplo/include/: thread.h
Threads/Barreira/barreira_exemplo/src/: main.c  thread.c
Threads/Mutex/FIFO/: CMakeLists.txt  main.c
Threads/Mutex/broadcast/: CMakeLists.txt  main.c
Threads/Mutex/condicional/: CMakeLists.txt
Threads/Mutex/condition-producao-em-3-estagios/: CMakeLists.txt  descricao-tarefa.txt
Threads/Mutex/mutex_recursivo/: CMakeLists.txt
Threads/Mutex/mutex_recursivo/src/: mutexrecursivo.c
Threads/Mutex/race_condition/: CMakeLists.txt
Threads/Mutex/race_condition/include/: thread.h
Threads/Mutex/race_condition/src/: main.c  thread.c
Threads/Semaphore/5_threads_semaphore/: CMakeLists.txt  main.c
Threads/Semaphore/problema-dos-5-filosofos/: CMakeLists.txt  main.c
Threads/Testes/: codigo_de_termino.c  multiplas_threads.c  passagem_parametro.c
Threads/Testes/basic/: Tarefa.c  correcao_tarefa_01.c  multiplas_threads.c
Threads/Testes/teste_clion_lnx/: CMakeLists.txt
Threads/Testes/teste_clion_lnx/include/: thread.h
Threads/Testes/teste_clion_lnx/src/: main.c  thread.c
Threads/Testes/teste_cmake/: main.c
Threads/exercicio_4/: exercicio_4.cbp  exercicio_4.depend  globals.c  globals.h  main.c  thread.c  thread.h
Threads/teste_cmake/: CMakeLists.txt
exercicios/analise-chamadas-sistema/: analise.md  ola_mundo  ola_mundo.c
(+2 files in other folders)
